tests/outref/TL006.ref
OCTO> select
OCTO> COLUMN_A
OCTO> ,COLUMN_B
OCTO> from names; select notathing from names; select firstname from names limit 1;
[ERROR] PATH:LINENUM DATE TIME : Unknown column: COLUMN_A
Error with syntax near (line 2, column 1):

select
COLUMN_A
COLUMN_A_ERROR
[ERROR] PATH:LINENUM DATE TIME : Unknown column: COLUMN_B
Error with syntax near (line 3, column 2):

select
COLUMN_A
,COLUMN_B
COLUMN_B_ERROR
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: select
COLUMN_A
,COLUMN_B
from names;
[ERROR] PATH:LINENUM DATE TIME : Unknown column: NOTATHING
Error with syntax near (line 1, column 8):

from names; select notathing from names; select firstname from names limit 1;
                   ^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: select notathing from names;
Zero
OCTO> select lastname from names limit 1;
Cool
OCTO> 
